# blip

./: .gitignore  .taplo.toml  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain  rustfmt.toml
.github/workflows/: main.yml  nightly.yml  stable.yml
proto/: blip.proto  cache.proto
src/: lib.rs  macros.rs  overlay.rs
src/cluster/: bootstrap.rs  cut.rs  faultdetect.rs  mod.rs  partition.rs  proto.rs
src/collections/: event.rs  freqset.rs  mod.rs  tumbler.rs
src/service/: cache.rs  mod.rs
src/simulation/: add_origin.rs  connection.rs  layer.rs  mod.rs  reconnect.rs  socket.rs
src/tests/: ctx.rs  mod.rs
tests/: cache.rs  join_protocol.rs  membership.rs  release.rs  shared.rs  simulated.rs
