[package]
name          = "blip"
version       = "0.1.0-alpha.9"
authors       = ["nytopop <ericizoita@gmail.com>"]
edition       = "2018"
license       = "MIT OR Apache-2.0"
description   = "A crate for writing fast and highly resilient in-process gRPC service meshes."
homepage      = "https://github.com/nytopop/blip"
repository    = "https://github.com/nytopop/blip"
documentation = "https://docs.rs/blip"
keywords      = ["rapid", "membership", "mesh", "grpc", "cluster"]
categories    = ["network-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full    = ["cache"]
cache   = ["cache_2q", "consistent_hash_ring", "once_cell"]

[build-dependencies]
tonic-build = { version = "0.2.0", default-features = false, features = ["transport", "prost"] }

[dependencies]
prost     = "0.6.1"
bytes     = "0.5.4"
http      = "0.2.1"
tracing   = "0.1.13"
fnv       = "1.0.6"
rand      = "0.7.3"
tonic     = { version = "0.2.1" , features = ["transport", "tls"] }
futures   = { version = "0.3.4" , features = ["alloc"] }
tokio     = { version = "0.2.21", features = ["sync", "rt-threaded", "time", "macros"] }
thiserror = "1.0.19"

# cache
cache_2q             = { version = "0.10.0", optional = true }
consistent_hash_ring = { version = "0.7.1" , optional = true }
once_cell            = { version = "1.4.0" , optional = true }

[dev-dependencies]
quickcheck        = "0.9.2"
quickcheck_macros = "0.9.1"
quickcheck_async  = "0.1.1"
version-sync      = "0.9.0"
