[package]
name          = "blip"
version       = "0.1.0"
authors       = ["nytopop <ericizoita@gmail.com>"]
edition       = "2018"
license       = "MIT OR Apache-2.0"
description   = "A crate for writing fast and highly resilient in-process gRPC service meshes."
homepage      = "https://github.com/nytopop/blip"
repository    = "https://github.com/nytopop/blip"
documentation = "https://docs.rs/blip"
keywords      = ["rapid", "membership", "mesh", "grpc", "cluster"]
categories    = ["network-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full    = ["cache"]
cache   = ["consistent_hash_ring", "cache_2q", "once_cell"]

[build-dependencies]
tonic-build = { version = "0.3.0", default-features = false, features = ["transport", "prost"] }

[dependencies]
prost     = "0.6.1"
bytes     = "0.5.6"
http      = "0.2.1"
tracing   = "0.1.19"
fnv       = "1.0.7"
rand      = "0.7.3"
tonic     = { version = "0.3.1" , features = ["transport", "tls"] }
futures   = { version = "0.3.5" , features = ["alloc"] }
tokio     = { version = "0.2.22", features = ["sync", "rt-threaded", "time", "macros"] }
thiserror = "1.0.20"
log       = "0.4.11"

# service-specific deps
consistent_hash_ring = { version = "0.7.2" , optional = true }
cache_2q             = { version = "0.10.1", optional = true }
once_cell            = { version = "1.4.1" , optional = true }

[dev-dependencies]
quickcheck        = "0.9.2"
quickcheck_macros = "0.9.1"
quickcheck_async  = "0.1.1"
version-sync      = "0.9.1"
simplelog         = { version = "0.8.0", features = ["test"] }
